convinience: text wrap, images are fixed

--- a/scss/blocks/_convinience.scss
+++ b/scss/blocks/_convinience.scss
@@ -10,6 +10,10 @@
     max-width: 100%;
     gap: 23px;
     margin: 66px auto 54px;
+
+    & :nth-child(3) .card-item__slogan {
+        max-width: 300px;
+    }
 }
 
 .card-item {
@@ -47,6 +51,7 @@
     }
 
     &__slogan {
+        max-width: 200px;
         font-size: 24px;
         font-weight: 400;
         text-align: center;
@@ -63,7 +68,7 @@
         max-width: 750px;
         margin: 0 auto;
     }
-    
+
     .card-wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -71,14 +76,14 @@
         max-width: 580px;
         margin: 50px auto 28px;
     }
-    
+
     .card-item {
         max-width: 274px;
         min-width: 274px;
         max-height: 271px;
         min-height: 271px;
         padding: 16px 15px 34px 15px;
-    
+
         &__button {
             align-self: flex-start;
             max-width: 125px;
@@ -87,13 +92,14 @@
             min-height: 34px;
             font-size: 15px;
         }
-    
+
         &__image {
             max-height: 65px;
             margin-top: 25px;
         }
-    
+
         &__slogan {
+            max-width: 160px;
             font-size: 19px;
             text-align: center;
         }
@@ -105,7 +111,7 @@
         max-width: 390px;
         margin: 0 auto;
     }
-    
+
     .card-wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -113,7 +119,7 @@
         max-width: 340px;
         margin: 44px auto 24px;
     }
-    
+
     .card-item {
         display: grid;
         grid-template-columns: 1fr 3fr;
@@ -123,7 +129,7 @@
         max-height: 126px;
         min-height: 126px;
         padding: 9px 8px 22px 8px;
-    
+
         &__button {
             align-self: flex-start;
             max-width: 115px;
@@ -132,7 +138,7 @@
             min-height: 30px;
             font-size: 15px;
         }
-    
+
         &__image {
             grid-column: 1/2;
             grid-row: 2/3;
@@ -140,7 +146,7 @@
             margin-top: 18px;
             justify-self: center;
         }
-    
+
         &__slogan {
             margin-top: 20px;
             grid-column: 2/3;
