--- a/scss/style.css
+++ b/scss/style.css
@@ -430,6 +430,9 @@ body {
   gap: 23px;
   margin: 66px auto 54px;
 }
+.card-wrapper :nth-child(3) .card-item__slogan {
+  max-width: 300px;
+}
 
 .card-item {
   display: flex;
@@ -464,6 +467,7 @@ body {
   margin-top: 30px;
 }
 .card-item__slogan {
+  max-width: 200px;
   font-size: 24px;
   font-weight: 400;
   text-align: center;
@@ -501,6 +505,7 @@ body {
     margin-top: 25px;
   }
   .card-item__slogan {
+    max-width: 160px;
     font-size: 19px;
     text-align: center;
   }
